--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
                 android:id="@+id/button3"
                 android:layout_width="135dp"
                 android:layout_height="wrap_content"
+                android:onClick="ingresar"
                 android:text="@string/ingresar" />
 
         </LinearLayout>
