--- a/app/src/main/res/layout-sw480dp/activity_main.xml
+++ b/app/src/main/res/layout-sw480dp/activity_main.xml
@@ -54,7 +54,7 @@
         app:srcCompat="@drawable/camion" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
@@ -73,11 +73,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/login"
         app:srcCompat="@drawable/google" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/ing_google"
         android:layout_width="213dp"
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
