--- a/app/src/main/res/layout-sw720dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_main.xml
@@ -53,7 +53,7 @@
         app:srcCompat="@drawable/camion" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login"
         android:layout_width="213dp"
         android:layout_height="48dp"
         android:layout_marginTop="84dp"
@@ -72,11 +72,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.441"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/login"
         app:srcCompat="@drawable/google" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/ing_google"
         android:layout_width="307dp"
         android:layout_height="49dp"
         android:layout_marginTop="8dp"
