--- a/app/src/main/res/layout/activity_direcciones.xml
+++ b/app/src/main/res/layout/activity_direcciones.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
-        android:id="@+id/camiar_dir"
+        android:id="@+id/cambiar_dir"
         android:layout_width="108dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -98,7 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/dir_iniciar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
