--- a/app/src/main/res/layout/activity_ingrasar_direcciones.xml
+++ b/app/src/main/res/layout/activity_ingrasar_direcciones.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/buscar_transporte"
         android:layout_width="232dp"
         android:layout_height="44dp"
         android:ems="10"
@@ -41,7 +41,7 @@
         tools:layout_editor_absoluteY="174dp" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/busc_transp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Buscar Transporte"
