--- a/app/src/main/res/layout/activity_pedir_transporte.xml
+++ b/app/src/main/res/layout/activity_pedir_transporte.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/pedir_trans"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pedir un Transporte"
@@ -38,7 +38,7 @@
         tools:layout_editor_absoluteY="181dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/cerrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cerrar Sesion"
