--- a/app/src/main/res/layout/activity_elegir_transporte.xml
+++ b/app/src/main/res/layout/activity_elegir_transporte.xml
@@ -41,10 +41,12 @@
         android:id="@+id/pedir_transporte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
         android:text="Pedir Transporte"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintTop_toBottomOf="@+id/selec_transp" />
 
     <ImageView
         android:id="@+id/imageView12"
@@ -53,6 +55,9 @@
         android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pedir_transporte"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/camion" />
 </androidx.constraintlayout.widget.ConstraintLayout>
