--- a/app/src/main/res/layout/activity_ingrasar_direcciones.xml
+++ b/app/src/main/res/layout/activity_ingrasar_direcciones.xml
@@ -32,22 +32,25 @@
         android:id="@+id/buscar_transporte"
         android:layout_width="232dp"
         android:layout_height="44dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="Direccion"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="174dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
         android:id="@+id/busc_transp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
         android:text="Buscar Transporte"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="242dp" />
+        app:layout_constraintTop_toBottomOf="@+id/buscar_transporte" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -56,6 +59,9 @@
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/busc_transp"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/camion" />
 </androidx.constraintlayout.widget.ConstraintLayout>
