--- a/app/src/main/res/layout/activity_precio.xml
+++ b/app/src/main/res/layout/activity_precio.xml
@@ -32,10 +32,12 @@
         android:id="@+id/imageView4"
         android:layout_width="46dp"
         android:layout_height="51dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_popup_sync"
-        tools:layout_editor_absoluteY="217dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -44,6 +46,9 @@
         android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/camion" />
 </androidx.constraintlayout.widget.ConstraintLayout>
