--- a/app/src/main/res/layout/activity_ingrasar_direcciones.xml
+++ b/app/src/main/res/layout/activity_ingrasar_direcciones.xml
@@ -45,10 +45,11 @@
         android:id="@+id/busc_transp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="36dp"
+        android:onClick="pedir_transporte"
         android:text="Buscar Transporte"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buscar_transporte" />
 
