--- a/app/src/main/res/layout/activity_servicio_completado.xml
+++ b/app/src/main/res/layout/activity_servicio_completado.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:onClick="regresa"
         android:text="Volver al inicio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
