--- a/app/src/main/res/layout-sw480dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw480dp-land/activity_main.xml
@@ -85,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="84dp"
+        android:onClick="registrar"
         android:text="@string/ingresar_Google"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView7"
