--- a/app/src/main/res/layout-sw60dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw60dp-land/activity_main.xml
@@ -80,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
+        android:onClick="registrar"
         android:text="@string/ingresar_Google"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView7"
