--- a/app/src/main/res/layout-sw60dp/activity_main.xml
+++ b/app/src/main/res/layout-sw60dp/activity_main.xml
@@ -79,6 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="registrar"
         android:text="@string/ingresar_Google"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
