--- a/app/src/main/res/layout/activity_elegir_transporte.xml
+++ b/app/src/main/res/layout/activity_elegir_transporte.xml
@@ -28,25 +28,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <Spinner
-        android:id="@+id/selec_transp"
-        android:layout_width="226dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
     <Button
         android:id="@+id/pedir_transporte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:onClick="direcciones"
         android:text="Pedir Transporte"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selec_transp" />
+        app:layout_constraintTop_toBottomOf="@+id/selec_transp"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/selec_transp"
+        android:layout_width="188dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="68dp"
+        android:hint="Transporte"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
